@@ -7,6 +7,7 @@ import com.vw.preferences.infrastructure.repository.user.entity.UserEntity;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class UserEntityMapper {
@@ -14,14 +15,14 @@ public class UserEntityMapper {
         public User toDom(UserEntity userEntity) {
             List<Consent> consentList = userEntity.getConsents().stream()
                     .map(UserEntityMapper::consentToDom)
-                    .toList();
+                    .collect(Collectors.toList());
             return new User(userEntity.getUserId(), userEntity.getEmail(), consentList);
         }
 
         public UserEntity toDocument(User user) {
             List<ConsentEntity> consentEntities = user.getConsents().stream()
                     .map(UserEntityMapper::consentToDocument)
-                    .toList();
+                    .collect(Collectors.toList());
             return new UserEntity(user.getUserId(), user.getEmail(), consentEntities);
         }
 
